<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2013-2014 GermainZ@xda-developers.com
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/color_picker_root"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dip"
        android:text="@string/saturation"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <com.larswerkman.holocolorpicker.SaturationBar
        android:id="@+id/saturationbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dip"
        android:text="@string/value"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <com.larswerkman.holocolorpicker.ValueBar
        android:id="@+id/valuebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dip"
        android:text="@string/opacity"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <com.larswerkman.holocolorpicker.OpacityBar
        android:id="@+id/opacitybar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dip"
        android:text="@string/hex"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/value"
            android:layout_width="0dip"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLength="8"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/apply_value"
            android:layout_width="0dip"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/apply"/>

    </LinearLayout>

</LinearLayout>
